--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -31,6 +31,9 @@ jobs:
 
     - name: Terraform Init
       run: terraform init  # Initializes Terraform in the current directory
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}  # Injects AWS Access Key
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # Runs `terraform apply` to apply the changes
 
     - name: Terraform Validate
       run: terraform validate  # Validates the Terraform configuration
