--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -17,6 +17,12 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2  # Checks out your code from the repository
+    
+    - name: Set up AWS credentials
+      run: |
+        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws configure set region us-east-1
 
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1  # Sets up Terraform on the runner
@@ -31,10 +37,7 @@ jobs:
 
     - name: Terraform Init
       run: terraform init  # Initializes Terraform in the current directory
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}  # Injects AWS Access Key
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # Runs `terraform apply` to apply the changes
-
+      
     - name: Terraform Validate
       run: terraform validate  # Validates the Terraform configuration
 
