--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -1,12 +1,12 @@
 name: Terraform Workflow
 
 on:
-  push:
-    branches:
-      - infra  # Trigger on push to the 'main' branch, change if you use a different branch
-  pull_request:
-    branches:
-      - infra  # Trigger on pull request to the 'main' branch
+  # push:
+  #   branches:
+  #     - infra  # Trigger on push to the 'main' branch, change if you use a different branch
+  # pull_request:
+  #   branches:
+  #     - infra  # Trigger on pull request to the 'main' branch
   workflow_dispatch: # Manual trigger from GitHub UI
 
 jobs:
@@ -51,4 +51,9 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # Runs `terraform apply` to apply the changes
       # env:
       #   TF_VAR_my_variable: ${{ secrets.MY_SECRET_VAR }}  # Example of using secret variables (optional)
-
+    #  - name: Terraform Destroy
+    #   # if: ${{ github.event_name == 'workflow_dispatch' }}  # This ensures the destroy runs only when triggered manually
+    #   run: terraform destroy -auto-approve
+    #   env:
+    #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
