--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -56,4 +56,4 @@ jobs:
     #   run: terraform destroy -auto-approve
     #   env:
     #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }
