--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -4,7 +4,7 @@ on:
 
   workflow_dispatch:
 #     branches:
-#       - infra  # Manually trigger the destroy workflow
+#       - infra  # Manually trigger the destroy workflow.
 
 jobs:
   terraform:
