--- a/.github/workflows/destroy.yaml
+++ b/.github/workflows/destroy.yaml
@@ -1,9 +1,9 @@
 name: Terraform Destroy Workflow
 
 on:
-  push:
-    branches:
-      - infra  
+  # push:
+  #   branches:
+  #     - infra  
   workflow_dispatch:
 jobs:
   terraform:
